トップページ等完成

--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -3,5 +3,5 @@
 @import "~tag-it/css/jquery.tagit";
 @import "cropperjs/dist/cropper";
 @import "~lity/dist/lity.min";
-@import "~animon/dist/animon";
 @import "~cookieconsent/build/cookieconsent.min";
+@import "~sal.js/dist/sal";
