--- a/app/views/home/top.html.erb
+++ b/app/views/home/top.html.erb
@@ -98,41 +98,41 @@
 
 <main>
   <div class="container text-center" id="about">
-    <div class="my-5 fs-5 shadow-sm animonItem" data-effect="scaleDown">
+    <div class="my-5 fs-5 shadow-sm" data-sal="slide-down" data-sal-duration="500">
       <div class="px-3">
-        <h2 class="animonItem mb-5" data-effect="scaleDown">Amicaとは？</h2>
-        <p class="animonItem mb-3" data-effect="fadeInRight" data-delay="200">Amicaはあなたの学校生活に<u>新たな出会いをプラス</u>する<u>コミュニケーションツール</u>です
+        <h2 class="mb-5" data-sal="slide-down" data-sal-duration="500">Amicaとは？</h2>
+        <p class="mb-3" data-sal="flip-right" data-sal-delay="200" data-sal-duration="500">Amicaはあなたの学校生活に<u>新たな出会いをプラス</u>する<u>コミュニケーションツール</u>です
         </p>
-        <p class="animonItem mb-3" data-effect="fadeInRight" data-delay="200">このアプリケーションはISC専用の友達出会い系アプリです。</p>
-        <p class="animonItem mb-3" data-effect="fadeInRight" data-delay="200">あなたの<u>趣味や特技、知りたいこと、興味あること</u>などを<u>タグ</u>として入力し、タグを参照して自動的におすすめな友達を紹介してくれます。</p>
-        <p class="animonItem mb-3 pb-3" data-effect="fadeInRight" data-delay="200">さらに、気になっていた人の趣味や特技なども可視化されたり、呼んでほしいニックネームなども登録するなどの更に親しくなれるような機能を用意していますので会話につながる工夫もできています。</p>
+        <p class="mb-3" data-sal="flip-right" data-sal-delay="200" data-sal-duration="500">このアプリケーションはISC専用の友達出会い系アプリです。</p>
+        <p class="mb-3" data-sal="flip-right" data-sal-delay="200" data-sal-duration="500">あなたの<u>趣味や特技、知りたいこと、興味あること</u>などを<u>タグ</u>として入力し、タグを参照して自動的におすすめな友達を紹介してくれます。</p>
+        <p class="mb-3 pb-3" data-sal="flip-right" data-sal-delay="200" data-sal-duration="500">さらに、気になっていた人の趣味や特技なども可視化されたり、呼んでほしいニックネームなども登録するなどの更に親しくなれるような機能を用意していますので会話につながる工夫もできています。</p>
       </div>
     </div>
 
-    <div class="my-5 fs-5 shadow-sm animonItem" data-effect="scaleDown">
+    <div class="my-5 fs-5 shadow-sm" data-sal="slide-down" data-sal-duration="500">
       <div class="px-3">
-        <h2 class="animonItem my-5" data-effect="scaleDown">どんな事ができるの？</h2>
-        <p class="animonItem mb-3" data-effect="fadeInRight" data-delay="200">Amicaでは新しい人脈がしっかりと築けるような様々な機能が用意してあります。</p>
+        <h2 class="my-5" data-sal="slide-down" data-sal-duration="500">どんな事ができるの？</h2>
+        <p class="mb-3" data-sal="flip-right" data-sal-delay="200" data-sal-duration="500">Amicaでは新しい人脈がしっかりと築けるような様々な機能が用意してあります。</p>
         <ul class="mb-3" style="list-style: none">
-          <li class="animonItem" data-effect="fadeInRight" data-delay="300">・チャット機能</li>
-          <li class="animonItem" data-effect="fadeInRight" data-delay="300">・コミュニティ(公開グループチャット)機能</li>
-          <li class="animonItem" data-effect="fadeInRight" data-delay="300">・タイムライン機能</li>
-          <li class="animonItem" data-effect="fadeInRight" data-delay="300">・おすすめユーザー機能</li>
-          <li class="animonItem mb-3" data-effect="fadeInRight" data-delay="300">・自動マッチング機能　等</li>
+          <li data-sal="flip-right" data-sal-delay="300" data-sal-duration="500">・チャット機能</li>
+          <li data-sal="flip-right" data-sal-delay="300" data-sal-duration="500">・コミュニティ(公開グループチャット)機能</li>
+          <li data-sal="flip-right" data-sal-delay="300" data-sal-duration="500">・タイムライン機能</li>
+          <li data-sal="flip-right" data-sal-delay="300" data-sal-duration="500">・おすすめユーザー機能</li>
+          <li class="mb-3" data-sal="flip-right" data-sal-delay="300" data-sal-duration="500">・自動マッチング機能　等</li>
         </ul>
-        <p class="animonItem my-3" data-effect="fadeInRight" data-delay="200">さらに学園内限定ならではの機能もあります。</p>
+        <p class="my-3" data-sal="slide-down" data-sal-delay="200" data-sal-duration="500">さらに学園内限定ならではの機能もあります。</p>
         <ul style="list-style: none">
-          <li class="animonItem" data-effect="fadeInRight" data-delay="300">・ランキング機能</li>
-          <li class="animonItem mb-3 pb-3" data-effect="fadeInRight" data-delay="300">・バッジ機能　等</li>
+          <li data-sal="flip-right" data-sal-delay="300" data-sal-duration="500">・ランキング機能</li>
+          <li class="mb-3 pb-3" data-sal="flip-right" data-sal-delay="300" data-sal-duration="500">・バッジ機能　等</li>
         </ul>
       </div>
     </div>
-    <div class="my-5 fs-5 shadow-sm mb-3 animonItem" data-effect="scaleDown">
+    <div class="my-5 fs-5 shadow-sm mb-3" data-sal="slide-down" data-sal-duration="500">
       <div class="px-3">
-        <h2 class="animonItem my-5" data-effect="scaleDown">さっそく始めてみましょう</h2>
-        <p class="animonItem mb-3" data-effect="fadeInRight" data-delay="200">Amicaは学校のメールアドレスで認証するので、たくさんの個人情報を入力する本人確認が不要です。</p>
-        <p class="animonItem mb-3" data-effect="fadeInRight" data-delay="300">登録後にはより良い出会いができるように、わかりやすいチュートリアルが表示されます。</p>
-        <%= link_to "会員登録", new_user_registration_path, class: "animonItem btn btn-primary mb-3", data: { effect: "fadeInRight", delay: "200" } %>
+        <h2 class="my-5" data-sal="slide-down" data-sal-duration="500">さっそく始めてみましょう</h2>
+        <p class="mb-3" data-sal="flip-right" data-sal-delay="200" data-sal-duration="500">Amicaは学校のメールアドレスで認証するので、たくさんの個人情報を入力する本人確認が不要です。</p>
+        <p class="mb-3" data-sal="flip-right" data-sal-delay="200" data-sal-duration="500">登録後にはより良い出会いができるように、わかりやすいチュートリアルが表示されます。</p>
+        <%= link_to "会員登録", new_user_registration_path, class: "btn btn-primary mb-3", data: { sal: "fadeInRight", sal_delay: "200", sal_duration: "500" } %>
       </div>
     </div>
   </div>
