--- a/app/views/home/avails.html.erb
+++ b/app/views/home/avails.html.erb
@@ -1,12 +1,12 @@
-<h2 class="animonItem" data-effect="scaleDown">クレジット</h2>
+<h2 data-sal="slide-down">クレジット</h2>
 <div class="medium">
-  <h3 class="animonItem" data-effect="scaleDown" data-delay="200">Avails 2T1 グループ１</h3>
+  <h3 data-sal="slide-down" data-sal-delay="200" data-sal-duration="500">Avails 2T1 グループ１</h3>
   <div class="members">
-    <span class="animonItem" data-effect="fadeInRight" data-delay="<%= rand(300..1500) %>">05 薄井大樹</span>
-    <span class="animonItem" data-effect="fadeInRight" data-delay="<%= rand(300..1500) %>">06 宇津宮一歩</span>
-    <span class="animonItem" data-effect="fadeInRight" data-delay="<%= rand(300..1500) %>">08 遠藤桂樹</span><br>
-    <span class="animonItem" data-effect="fadeInRight" data-delay="<%= rand(300..1500) %>">17 久保聖人</span>
-    <span class="animonItem" data-effect="fadeInRight" data-delay="<%= rand(300..1500) %>">29 須山龍</span>
-    <span class="animonItem" data-effect="fadeInRight" data-delay="<%= rand(300..1500) %>">38 友杉颯太</span>
+    <span data-sal="fade" data-sal-delay="300" data-sal-duration="500">05 薄井大樹</span>
+    <span data-sal="fade" data-sal-delay="400" data-sal-duration="500">06 宇津宮一歩</span>
+    <span data-sal="fade" data-sal-delay="500" data-sal-duration="500">08 遠藤桂樹</span><br>
+    <span data-sal="fade" data-sal-delay="600" data-sal-duration="500">17 久保聖人</span>
+    <span data-sal="fade" data-sal-delay="700" data-sal-duration="500">29 須山龍</span>
+    <span data-sal="fade" data-sal-delay="800" data-sal-duration="500">38 友杉颯太</span>
   </div>
 </div>
