--- a/app/views/layouts/home.html.erb
+++ b/app/views/layouts/home.html.erb
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ja">
+<html lang="ja" class="h-100">
   <head>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
@@ -62,7 +62,7 @@
       <%= yield %>
     </main>
 
-    <footer class="text-center bg-gray text-light" style="margin-top:20px">
+    <footer class="text-center bg-gray text-light mt-auto" style="margin-top:20px">
       <div class="container">
         <span class="text-muted">
           ©2021 - <%= DateTime.now.strftime('%Y') %> <%= link_to("Avails Group", avails_path, class: "text-dark") %>
