--- a/app/views/home/static.html.erb
+++ b/app/views/home/static.html.erb
@@ -30,31 +30,31 @@
 
   <h3>第4条（禁止事項）</h3>
   <p>ユーザーは，本サービスの利用にあたり，以下の行為をしてはなりません。</p>
-  <ul style="list-style: none;">
-    <li>・法令または公序良俗に違反する行為</li>
-    <li>・犯罪行為に関連する行為</li>
-    <li>・当グループ，本サービスの他のユーザー，または第三者のサーバーまたはネットワークの機能を破壊したり，妨害したりする行為</li>
-    <li>・当グループのサービスの運営を妨害するおそれのある行為</li>
-    <li>・他のユーザーに関する個人情報等を収集または蓄積する行為</li>
-    <li>・不正アクセスをし，またはこれを試みる行為</li>
-    <li>・他のユーザーに成りすます行為</li>
-    <li>・当グループのサービスに関連して，反社会的勢力に対して直接または間接に利益を供与する行為</li>
-    <li>・当グループ，本サービスの他のユーザーまたは第三者の知的財産権，肖像権，プライバシー，名誉その他の権利または利益を侵害する行為</li>
-    <li>・以下の表現を含み，または含むと当グループが判断する内容を本サービス上に投稿し，または送信する行為</li>
-    <li>・過度に暴力的な表現</li>
-    <li>・露骨な性的表現</li>
-    <li>・人種，国籍，信条，性別，社会的身分，門地等による差別につながる表現</li>
-    <li>・自殺，自傷行為，薬物乱用を誘引または助長する表現</li>
-    <li>・その他反社会的な内容を含み他人に不快感を与える表現</li>
-    <li>・以下を目的とし，または目的とすると当グループが判断する行為</li>
-    <li>・営業，宣伝，広告，勧誘，その他営利を目的とする行為（当グループの認めたものを除きます。）</li>
-    <li>・性行為やわいせつな行為を目的とする行為</li>
-    <li>・面識のない異性との出会いや交際を目的とする行為</li>
-    <li>・他のユーザーに対する嫌がらせや誹謗中傷を目的とする行為</li>
-    <li>・当グループ，本サービスの他のユーザー，または第三者に不利益，損害または不快感を与えることを目的とする行為</li>
-    <li>・その他本サービスが予定している利用目的と異なる目的で本サービスを利用する行為</li>
-    <li>・宗教活動または宗教団体への勧誘行為</li>
-    <li>・その他，当グループが不適切と判断する行為</li>
+  <ul style="text-align: center; list-style: none;">
+    <li>法令または公序良俗に違反する行為</li>
+    <li>犯罪行為に関連する行為</li>
+    <li>当グループ，本サービスの他のユーザー，または第三者のサーバーまたはネットワークの機能を破壊したり，妨害したりする行為</li>
+    <li>当グループのサービスの運営を妨害するおそれのある行為</li>
+    <li>他のユーザーに関する個人情報等を収集または蓄積する行為</li>
+    <li>不正アクセスをし，またはこれを試みる行為</li>
+    <li>他のユーザーに成りすます行為</li>
+    <li>当グループのサービスに関連して，反社会的勢力に対して直接または間接に利益を供与する行為</li>
+    <li>当グループ，本サービスの他のユーザーまたは第三者の知的財産権，肖像権，プライバシー，名誉その他の権利または利益を侵害する行為</li>
+    <li>以下の表現を含み，または含むと当グループが判断する内容を本サービス上に投稿し，または送信する行為</li>
+    <li>過度に暴力的な表現</li>
+    <li>露骨な性的表現</li>
+    <li>人種，国籍，信条，性別，社会的身分，門地等による差別につながる表現</li>
+    <li>自殺，自傷行為，薬物乱用を誘引または助長する表現</li>
+    <li>その他反社会的な内容を含み他人に不快感を与える表現</li>
+    <li>以下を目的とし，または目的とすると当グループが判断する行為</li>
+    <li>営業，宣伝，広告，勧誘，その他営利を目的とする行為（当グループの認めたものを除きます。）</li>
+    <li>性行為やわいせつな行為を目的とする行為</li>
+    <li>面識のない異性との出会いや交際を目的とする行為</li>
+    <li>他のユーザーに対する嫌がらせや誹謗中傷を目的とする行為</li>
+    <li>当グループ，本サービスの他のユーザー，または第三者に不利益，損害または不快感を与えることを目的とする行為</li>
+    <li>その他本サービスが予定している利用目的と異なる目的で本サービスを利用する行為</li>
+    <li>宗教活動または宗教団体への勧誘行為</li>
+    <li>その他，当グループが不適切と判断する行為</li>
   </ul>
   <h3>第5条（本サービスの提供の停止等）</h3>
   <p>当グループは，以下のいずれかの事由があると判断した場合，ユーザーに事前に通知することなく本サービスの全部または一部の提供を停止または中断することができるものとします。</p>
