--- a/app/views/home/top.html.erb
+++ b/app/views/home/top.html.erb
@@ -6,10 +6,10 @@
   <title>Amica</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <%= favicon_link_tag('amica.ico') %>
-  <%= stylesheet_link_tag 'home', media: 'all', 'data-turbolinks-track': 'reload' %>
-  <%= stylesheet_link_tag 'top', media: 'all', 'data-turbolinks-track': 'reload' %>
+  <%= stylesheet_link_tag 'home'%>
+  <%= stylesheet_link_tag 'top' %>
   <%= javascript_pack_tag 'home/index' %>
-  <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
+  <%= javascript_pack_tag 'application' %>
   <%= javascript_pack_tag 'home/settings' %>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -101,10 +101,10 @@
     <div class="my-5 fs-5 shadow-sm" data-sal="slide-down" data-sal-duration="500">
       <div class="px-3">
         <h2 class="mb-5" data-sal="slide-down" data-sal-duration="500">Amicaとは？</h2>
-        <p class="mb-3" data-sal="flip-right" data-sal-delay="200" data-sal-duration="500">Amicaはあなたの学校生活に<u>新たな出会いをプラス</u>する<u>コミュニケーションツール</u>です
+        <p class="mb-3" data-sal="flip-right" data-sal-delay="200" data-sal-duration="500">Amicaはあなたの学校生活に<span class="Text-Span JS_ScrollAnimationItem">新たな出会いをプラス</span>する<span class="Text-Span JS_ScrollAnimationItem">コミュニケーションツール</span>です
         </p>
         <p class="mb-3" data-sal="flip-right" data-sal-delay="200" data-sal-duration="500">このアプリケーションはISC専用の友達出会い系アプリです。</p>
-        <p class="mb-3" data-sal="flip-right" data-sal-delay="200" data-sal-duration="500">あなたの<u>趣味や特技、知りたいこと、興味あること</u>などを<u>タグ</u>として入力し、タグを参照して自動的におすすめな友達を紹介してくれます。</p>
+        <p class="mb-3" data-sal="flip-right" data-sal-delay="200" data-sal-duration="500">あなたの<span class="Text-Span JS_ScrollAnimationItem">趣味や特技、知りたいこと、興味あること</span>などを<span class="Text-Span JS_ScrollAnimationItem">タグ</span>として入力し、タグを参照して自動的におすすめな友達を紹介してくれます。</p>
         <p class="mb-3 pb-3" data-sal="flip-right" data-sal-delay="200" data-sal-duration="500">さらに、気になっていた人の趣味や特技なども可視化されたり、呼んでほしいニックネームなども登録するなどの更に親しくなれるような機能を用意していますので会話につながる工夫もできています。</p>
       </div>
     </div>
@@ -112,27 +112,27 @@
     <div class="my-5 fs-5 shadow-sm" data-sal="slide-down" data-sal-duration="500">
       <div class="px-3">
         <h2 class="my-5" data-sal="slide-down" data-sal-duration="500">どんな事ができるの？</h2>
-        <p class="mb-3" data-sal="flip-right" data-sal-delay="200" data-sal-duration="500">Amicaでは新しい人脈がしっかりと築けるような様々な機能が用意してあります。</p>
-        <ul class="mb-3" style="list-style: none">
-          <li data-sal="flip-right" data-sal-delay="300" data-sal-duration="500">・チャット機能</li>
-          <li data-sal="flip-right" data-sal-delay="300" data-sal-duration="500">・コミュニティ(公開グループチャット)機能</li>
-          <li data-sal="flip-right" data-sal-delay="300" data-sal-duration="500">・タイムライン機能</li>
-          <li data-sal="flip-right" data-sal-delay="300" data-sal-duration="500">・おすすめユーザー機能</li>
-          <li class="mb-3" data-sal="flip-right" data-sal-delay="300" data-sal-duration="500">・自動マッチング機能　等</li>
-        </ul>
-        <p class="my-3" data-sal="slide-down" data-sal-delay="200" data-sal-duration="500">さらに学園内限定ならではの機能もあります。</p>
-        <ul style="list-style: none">
-          <li data-sal="flip-right" data-sal-delay="300" data-sal-duration="500">・ランキング機能</li>
-          <li class="mb-3 pb-3" data-sal="flip-right" data-sal-delay="300" data-sal-duration="500">・バッジ機能　等</li>
-        </ul>
+        <p class="mb-3" data-sal="flip-right" data-sal-delay="200" data-sal-duration="500">Amicaでは<span class="Text-Span JS_ScrollAnimationItem">新しい人脈がしっかりと築ける</span>ような様々な機能が用意してあります。</p>
+        <div class="mb-3">
+          <p data-sal="flip-right" data-sal-delay="300" data-sal-duration="500">チャット機能</p>
+          <p data-sal="flip-right" data-sal-delay="300" data-sal-duration="500">コミュニティ(公開グループチャット)機能</p>
+          <p data-sal="flip-right" data-sal-delay="300" data-sal-duration="500">タイムライン機能</p>
+          <p data-sal="flip-right" data-sal-delay="300" data-sal-duration="500">おすすめユーザー機能</p>
+          <p class="mb-3" data-sal="flip-right" data-sal-delay="300" data-sal-duration="500">自動マッチング機能　等</p>
+        </div>
+        <p class="my-3" data-sal="slide-down" data-sal-delay="200" data-sal-duration="500">さらに<span class="Text-Span JS_ScrollAnimationItem">学園内限定ならではの機能</span>もあります。</p>
+        <div class="mb-3">
+          <p data-sal="flip-right" data-sal-delay="300" data-sal-duration="500">ランキング機能</p>
+          <p class="mb-3 pb-3" data-sal="flip-right" data-sal-delay="300" data-sal-duration="500">バッジ機能　等</p>
+        </div>
       </div>
     </div>
     <div class="my-5 fs-5 shadow-sm mb-3" data-sal="slide-down" data-sal-duration="500">
       <div class="px-3">
         <h2 class="my-5" data-sal="slide-down" data-sal-duration="500">さっそく始めてみましょう</h2>
-        <p class="mb-3" data-sal="flip-right" data-sal-delay="200" data-sal-duration="500">Amicaは学校のメールアドレスで認証するので、たくさんの個人情報を入力する本人確認が不要です。</p>
+        <p class="mb-3" data-sal="flip-right" data-sal-delay="200" data-sal-duration="500">Amicaは学校のメールアドレスで認証するので、たくさんの個人情報を入力する必要がありません。</p>
         <p class="mb-3" data-sal="flip-right" data-sal-delay="200" data-sal-duration="500">登録後にはより良い出会いができるように、わかりやすいチュートリアルが表示されます。</p>
-        <%= link_to "会員登録", new_user_registration_path, class: "btn btn-primary mb-3", data: { sal: "fadeInRight", sal_delay: "200", sal_duration: "500" } %>
+        <%= link_to "会員登録", new_user_registration_path, class: "btn btn-neumorphism mb-3",style: "background-color: #ddd;", data: { sal: "fadeInRight", sal_delay: "200", sal_duration: "500" } %>
       </div>
     </div>
   </div>
@@ -141,7 +141,7 @@
 <footer class="text-center bg-gray text-light" style="margin-top:100px">
   <div class="container">
     <span class="text-muted">
-      ©2021 - <%= DateTime.now.strftime('%Y') %> <%= link_to("Avails Group", avails_path, class: "text-dark") %>
+      ©2021 - <%= DateTime.now.strftime('%Y') %> <%= link_to("Avails Group", avails_path, class: "text-dark") %><br />
       <%= link_to("利用規約", static_path, class: "text-dark") %>
       <%= link_to("プライバシーポリシー", privacy_path, class: "text-dark") %>
     </span>
