--- a/app/views/layouts/home.html.erb
+++ b/app/views/layouts/home.html.erb
@@ -65,7 +65,7 @@
     <footer class="text-center bg-gray text-light mt-auto" style="margin-top:20px">
       <div class="container">
         <span class="text-muted">
-          ©2021 - <%= DateTime.now.strftime('%Y') %> <%= link_to("Avails Group", avails_path, class: "text-dark") %>
+          ©2021 - <%= DateTime.now.strftime('%Y') %> <%= link_to("Avails Group", avails_path, class: "text-dark") %><br />
           <%= link_to("利用規約", static_path, class: "text-dark") %>
           <%= link_to("プライバシーポリシー", privacy_path, class: "text-dark") %>
         </span>
