--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -29,7 +29,8 @@
     <div class="row">
       <div class="col-md-12 text-center" style="z-index: 1;">
         <div class="panel panel-default">
-          <div class="userprofile <%= @user.header.attached? ? '' : 'social' %>">
+          <div class="userprofile <%= @user.header.attached? ? '' : 'social' %>"style="background-image: url(<%= rails_blob_url(@user.decorate.header) %>);
+          background-size: contain; background-repeat: no-repeat;background-position: center;">
             <div class="d-flex justify-content-between">
               <div></div>
               <div style="margin-right: 10px">
