--- a/app/views/home/top.html.erb
+++ b/app/views/home/top.html.erb
@@ -80,7 +80,7 @@
       </ul>
     </div>
   </nav>
-  <p class="notice"><%= notice %></p>
+  <p class="notice mt-5"><%= notice %></p>
   <p class="notice"><%= alert %></p>
   <div class="position-absolute h-75 w-100 m-0 d-flex align-items-center justify-content-center">
     <%= image_tag("top_icon.png", class: "icon", id: "title-image") %>
