--- a/app/assets/stylesheets/profiles_show.scss
+++ b/app/assets/stylesheets/profiles_show.scss
@@ -21,25 +21,13 @@
   width: 100%;
 }
 .userpic{
-  margin: 40px auto;
+  margin: -15% auto auto auto;
+
 }
-.userprofile .userpic {
-  height: 100px;
-  width: 100px;
-  clear: both;
-  display: block;
-  border-radius: 100%;
-  box-shadow: 0px 3px 10px 0 rgba(0, 0, 0, 0.15);
-  -moz-box-shadow: 0px 3px 10px 0 rgba(0, 0, 0, 0.15);
-  -webkit-box-shadow: 0px 3px 10px 0 rgba(0, 0, 0, 0.15);
-  -ms-box-shadow: 0px 3px 10px 0 rgba(0, 0, 0, 0.15);
-  position: relative;
-  background-color:#FFFFFF;
-  z-index: 100;
-}
+
 .userprofile .userpic .userpicimg {
   height: auto;
-  width: 100%;
+  max-width: 300px;
   border-radius: 10%;
 }
 .username {
