--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -1,5 +1,19 @@
 <%= stylesheet_link_tag 'profiles', media: 'all', 'data-turbolinks-track': 'reload' %>
 <%= stylesheet_link_tag 'profiles_show', media: 'all', 'data-turbolinks-track': 'reload' %>
+<script>
+    window.addEventListener("DOMContentLoaded", function () {
+        $('.userpicimg').css({
+          width:window.innerWidth/5
+        })
+    })
+    function resizeImage(){
+        $('.userpicimg').css({
+            width : window.innerWidth/5
+        });
+    }
+
+    window.onresize = resizeImage;
+</script>
 <style>
     .send {
         margin-right: 2px;
@@ -29,8 +43,8 @@
     <div class="row">
       <div class="col-md-12 text-center" style="z-index: 1;">
         <div class="panel panel-default">
-          <div class="userprofile <%= @user.header.attached? ? '' : 'social' %>"style="background-image: url(<%= rails_blob_url(@user.decorate.header) %>);
-          background-size: cover;background-position: center;">
+          <div class="userprofile">
+            <%= image_tag @user.decorate.header,style: 'max-width:100%', 'data-lity' => 'data-lity' %>
             <div class="d-flex justify-content-between">
               <div style="margin-right: 10px">
                 <% unless current_user == @user %>
@@ -43,10 +57,11 @@
 
             <div class="userdata">
               <div class="userpic">
-                <%= image_tag @user.decorate.image, :size => '100x100', class: "userpicimg icon flex-shrink-0 question-icon bg-white" %>
+                <%= image_tag @user.decorate.image, class: "userpicimg icon flex-shrink-0 question-icon bg-white", 'data-lity' => 'data-lity' %>
               </div>
               <div class="names">
                 <h2 class="username"><%= '<i class="fas fa-crown" style="color: yellow; stroke: #82a5c8;stroke-width: 18px;"></i>'.html_safe if @user.admin %><%= @user.name %></h2>
+                <span>@<%= @user.userid %></span>
                 <p style="margin-bottom: 0">(<%= @user.nickname %>)
                   <% if following?(@user.followings_list, @current) && !matchers?(@user, @current) %>
                     <i class="fas fa-user-plus"></i>
@@ -54,7 +69,6 @@
                     <i class="fas fa-user-friends"></i>
                   <% end %>
                 </p>
-                <p>@<%= @user.userid %></p>
               </div>
             </div>
           </div>
