設定に項目追加

--- a/app/views/settings/index.html.erb
+++ b/app/views/settings/index.html.erb
@@ -7,11 +7,18 @@
   <div class="collapse show mb-3" id="collapseExample">
     <div class="mb-3 p-3 bg-white rounded shadow-sm">
       <br />
-      <p>学籍番号を
+      <p>入学年を
         <% if @user.setting.visible_enrolled_year %>
           <%= link_to "非表示にする", disable_enrolled_year_settings_path, method: :delete, class: "btn btn-primary", data: { disable_with: '変更中...' } %>
         <% else %>
           <%= link_to "表示する", enable_enrolled_year_settings_path, method: :post, class: "btn btn-primary", data: { disable_with: '変更中...' } %>
+        <% end %>
+      </p>
+      <p>学籍番号を
+        <% if @user.setting.visible_student_id %>
+          <%= link_to "非表示にする", disable_student_id_settings_path, method: :delete, class: "btn btn-primary", data: { disable_with: '変更中...' } %>
+        <% else %>
+          <%= link_to "表示する", enable_student_id_settings_path, method: :post, class: "btn btn-primary", data: { disable_with: '変更中...' } %>
         <% end %>
       </p>
     </div>
