--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -30,7 +30,6 @@
     <div class="row">
       <div class="col-md-12 text-center" style="z-index: 1;">
         <div class="panel panel-default">
-
           <div class="userprofile position-relative border-bottom mb-3">
             <%= image_tag @user.decorate.header, style: 'max-width:100%; max-height:100%', 'data-lity' => 'data-lity' %>
             <div class="position-absolute h-100 w-100 bottom-0 text-center d-flex align-items-center justify-content-center">
@@ -38,11 +37,15 @@
               <%= image_tag @user.decorate.image, class: "userpicimg icon bg-white position-absolute d-sm-none d-block", style: "max-width:70px" %>
             </div>
           </div>
-
           <div class="userdata border-bottom">
             <div class="names">
-              <span class="username"><%= '<i class="fas fa-crown" style="color: yellow; stroke: #82a5c8;stroke-width: 18px;"></i>'.html_safe if @user.admin %><%= @user.name %>
-                <br/></span>
+              <span class="username">
+                <% if @user.admin %>
+                  <i class="fas fa-crown" style="color: yellow; stroke: #82a5c8;stroke-width: 18px;margin-right: 5px"></i>
+                  <% end %>
+                <%= @user.name %>
+                <br/>
+              </span>
               <span>@<%= @user.userid %></span>
               <p style="margin-bottom: 0">(<%= @user.nickname %>)
                 <% if following?(@user.followings_list, @current) && !matchers?(@user, @current) %>
@@ -57,17 +60,17 @@
           <div class="col-md-12">
             <ul class="nav nav-pills float-start countlist" role="tablist">
               <%= link_to profile_follow_path(@user.userid), class: "text-dark" do %>
-                <%= render "profiles/presentatiton", title: "フォロー", value: @user.followings_list.size %>
+                <%= render "profiles/presentation", title: "フォロー", value: @user.followings_list.size %>
               <% end %>
               <%= link_to profile_follower_path(@user.userid), class: "text-dark" do %>
-                <%= render "profiles/presentatiton", title: "フォロワー", value: @user.followers_list.size %>
+                <%= render "profiles/presentation", title: "フォロワー", value: @user.followers_list.size %>
               <% end %>
-              <%= render "profiles/presentatiton", title: "入学年", value: @profile.enrolled_year if @user.setting.visible_enrolled_year %>
-              <%= render "profiles/presentatiton", title: "学科", value: @profile.grade %>
-              <%= render "profiles/presentatiton", title: "クラス", value: @profile.school_class %>
-              <%= render "profiles/presentatiton", title: "出席番号", value: @profile.number %>
-              <%= render "profiles/presentatiton", title: "クラス", value: @profile.school_class %>
-              <%= render "profiles/presentatiton", title: "学籍番号", value: @profile.student_id if @user.setting.visible_student_id %>
+              <%= render "profiles/presentation", title: "入学年", value: @profile.enrolled_year if @user.setting.visible_enrolled_year %>
+              <%= render "profiles/presentation", title: "学科", value: @profile.grade %>
+              <%= render "profiles/presentation", title: "クラス", value: @profile.school_class %>
+              <%= render "profiles/presentation", title: "出席番号", value: @profile.number %>
+              <%= render "profiles/presentation", title: "クラス", value: @profile.school_class %>
+              <%= render "profiles/presentation", title: "学籍番号", value: @profile.student_id if @user.setting.visible_student_id %>
             </ul>
 
             <% unless blocked?(current_user, @user) || blocked?(@user, current_user) %>
