お気に入り連打バグ修正 しかしコミュニティ内のお気に入りボタンがきもくなった

--- a/app/assets/stylesheets/community_index.scss
+++ b/app/assets/stylesheets/community_index.scss
@@ -160,6 +160,11 @@
   top :3%; right: 3%;
 }
 
+.position{
+  position: absolute;
+  top :3%; right: 3%;
+}
+
 .fa-bullhorn{
   position: absolute;
   top :6%; right: 3.2%;
