--- a/app/views/communities/show.html.erb
+++ b/app/views/communities/show.html.erb
@@ -15,11 +15,11 @@
       <%= link_to "チャット", community_chat_path(@community.id), class: "btn btn-outline-dark mx-2" %>
       <%= link_to "編集", edit_community_path, class: "btn btn-outline-dark mx-2" %>
       <% if @favorite.any? { |f| f == @community } %>
-        <%= link_to page_favorite_community_delete_path(@user.id, page_id: @community.id), method: :delete, class: 'mx-2', style: "", data: { disable_with: 'お気に入り解除' } do %>
+        <%= button_to page_favorite_community_delete_path(@user.id, page_id: @community.id), method: :delete, class: 'btn', style: "color: rgba(29, 144, 190, 0.8);", data: { disable_with: '<i class="fas fa-star fa-2x"></i>' } do %>
           <i class="fas fa-star fa-2x"></i>
         <% end %>
       <% else %>
-        <%= link_to page_favorite_community_create_path(@community.id), method: :post, class: 'mx-2', style: "", data: { disable_with: 'お気に入り登録' } do %>
+        <%= button_to page_favorite_community_create_path(@community.id), method: :post, class: 'btn', style: "color: rgba(29, 144, 190, 0.8);", data: { disable_with: '<i class="far fa-star fa-2x"></i>' } do %>
           <i class="far fa-star fa-2x"></i>
         <% end %>
       <% end %>
@@ -30,11 +30,11 @@
           脱退
         </button>
         <% if @favorite.any? { |f| f == @community } %>
-          <%= link_to page_favorite_community_delete_path(@user.id, page_id: @community.id), method: :delete, class: 'mx-2 ', style: "", data: { disable_with: 'お気に入り解除' } do%>
+          <%= button_to page_favorite_community_delete_path(@user.id, page_id: @community.id), method: :delete, class: 'mx-2 ', style: "color: rgba(29, 144, 190, 0.8);", data: { disable_with: '<i class="fas fa-star fa-2x"></i>' } do%>
             <i class="fas fa-star fa-2x"></i>
           <%end%>
         <% else %>
-          <%= link_to page_favorite_community_create_path(@community.id), method: :post, class: 'mx-2', style: "", data: { disable_with: 'お気に入り登録' } do%>
+          <%= button_to page_favorite_community_create_path(@community.id), method: :post, class: 'mx-2', style: "color: rgba(29, 144, 190, 0.8);", data: { disable_with: '<i class="far fa-star fa-2x"></i>' } do%>
             <i class="far fa-star fa-2x"></i>
           <%end%>
         <% end %>
