--- a/app/views/profiles/_header_modal.html.erb
+++ b/app/views/profiles/_header_modal.html.erb
@@ -30,8 +30,8 @@
             </div>
             <div class="container">
             <div class="canvas_wrapper" id="parent_header_source_canvas">
-              <canvas id="test" style="display: none"></canvas>
-              <img id="header_source_canvas" src="" width="100%" >
+              <canvas id="header_source_canvas" width="1" height="1" style="display: none"></canvas>
+              <img id="header_crop" src="" width="100%" >
             </div>
           </div>
             <div class="modal-footer">
