--- a/app/views/profiles/edit.html.erb
+++ b/app/views/profiles/edit.html.erb
@@ -43,7 +43,7 @@
       <label>
         <button type="button" class="btn btn-primary" style="display: none;" data-bs-toggle="modal" data-bs-target="#headerModal"></button>
         <canvas id="header_cropped_canvas" style="display:none;width: 200px;height: 200px;"></canvas>
-        <img src="<%=@image if defined?(@image) %>" id="header_result-img" style="display:none;width: 800px;height: 200px;">
+        <img src="<%=@image if defined?(@image) %>" id="header_result-img" style="display:none;width: 100%;height: auto;">
       </label>
 
       <p id="image_text">現在のアイコン</p>
