お気に入り連打バグ修正

--- a/app/assets/stylesheets/community_index.scss
+++ b/app/assets/stylesheets/community_index.scss
@@ -155,14 +155,9 @@
   transform: none;
 }
 
-.fa-star{
+.star{
   position: absolute;
-  top :3%; right: 3%;
-}
-
-.position{
-  position: absolute;
-  top :3%; right: 3%;
+  top :3%; right: 2%;
 }
 
 .fa-bullhorn{
