バッジを修正、リファクタリング

--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -119,7 +119,7 @@
           <div class="panel panel-default">
             <div class="panel-heading m-3">
               <h3 class="page-header">バッジ</h3>
-              <%= render 'profiles/badge' %>
+                <%= render 'profiles/badge_list' %>
             </div>
           </div>
         </div>
