--- a/app/views/profiles/_badge.html.erb
+++ b/app/views/profiles/_badge.html.erb
@@ -1,3 +1,3 @@
 <div class="amica-badge mx-1">
-  <i class="<%= icon %>" style="color: <%= badge_color(rare) %>;" data-bs-toggle="tooltip" data-bs-placement="top" title="<%= title %>"></i>
+  <i class="<%= icon %>" style="color: <%= badge_color(rare) %>;" data-bs-toggle="tooltip" data-bs-placement="top" data-bs-original-title="<%= title %>" ></i>
 </div>
